This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Compiler warnings on master (-Wstrict-prototypes)
Type: compile error Stage: resolved
Components: Build Versions: Python 3.10
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: brandtbucher Nosy List: brandtbucher
Priority: normal Keywords: patch

Created on 2021-03-03 22:44 by brandtbucher, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 24737 merged brandtbucher, 2021-03-03 22:46
Messages (2)
msg388064 - (view) Author: Brandt Bucher (brandtbucher) * (Python committer) Date: 2021-03-03 22:44
We're getting "function declaration isn’t a prototype [-Wstrict-prototypes]" warnings in Modules/_zoneinfo.c and Modules/_xxtestfuzz/fuzzer.c.

I'll have a patch up momentarily.
msg388076 - (view) Author: Brandt Bucher (brandtbucher) * (Python committer) Date: 2021-03-04 05:54
New changeset c61ec7e6b892313cd3ecbaf02227bacb9d5ddaa2 by Brandt Bucher in branch 'master':
bpo-43394: Fix -Wstrict-prototypes warnings (GH-24737)
https://github.com/python/cpython/commit/c61ec7e6b892313cd3ecbaf02227bacb9d5ddaa2
History
Date User Action Args
2022-04-11 14:59:42adminsetgithub: 87560
2021-03-04 05:54:23brandtbuchersetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2021-03-04 05:54:05brandtbuchersetmessages: + msg388076
2021-03-03 22:46:53brandtbuchersetkeywords: + patch
stage: patch review
pull_requests: + pull_request23508
2021-03-03 22:44:24brandtbuchercreate