bpo-43394: Fix -Wstrict-prototypes warnings (GH-24737)